added copy to clipboard feature

--- a/index.html
+++ b/index.html
@@ -414,6 +414,7 @@
                 <div class="preview-footer">
                     <input id="png-filename-input" class="filename" type="text" value="graph.png" />
                     <div class="preview-actions">
+                        <button id="png-copy-btn" class="secondary">Copy</button>
                         <a id="png-download-link" href="#" download="graph.png"><button id="png-download-btn">Download</button></a>
                         <button id="png-close-btn-2" class="secondary">Close</button>
                     </div>
